2010-04-13  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/reloc8.sh: Don't use -Wl,-z,nocopyreloc on
	sparc64.
	* testsuite/reloc9.sh: Likewise.

	* src/dwarf2.c (DEBUG_TYPES): Define.
	(debug_sections): Add .debug_types entry.
	(read_abbrev): Handle new DWARF4 forms.
	(adjust_attributes): DW_AT_segment can be a loclistptr.
	DW_AT_byte_size, DW_AT_bit_offset, DW_AT_bit_size,
	DW_AT_string_length, DW_AT_lower_bound, DW_AT_return_addr,
	DW_AT_bit_stride, DW_AT_upper_bound, DW_AT_count,
	DW_AT_segment, DW_AT_static_link, DW_AT_use_location,
	DW_AT_allocated, DW_AT_associated, DW_AT_data_location
	and DW_AT_byte_stride can be exprloc.  Handle new DWARF4 forms.
	(adjust_dwarf2_line): Handle adjusting DWARF4 .debug_line
	sections.
	(adjust_dwarf2_frame): Handle adjusting DWARF4 .debug_frame
	section.
	(adjust_dwarf2_info): New function, moved from adjust_dwarf2.
	Handle DWARF4 .debug_info and handle .debug_types too.
	(adjust_dwarf2): Call it for .debug_info and .debug_types
	sections.
	* src/dwarf2.h (DW_TAG_type_unit, DW_TAG_rvalue_reference_type,
	DW_TAG_template_alias, DW_FORM_sec_offset, DW_FORM_exprloc,
	DW_FORM_flag_present, DW_FORM_ref_sig8, DW_AT_bit_stride,
	DW_AT_byte_stride, DW_AT_description, DW_AT_binary_scale,
	DW_AT_decimal_scale, DW_AT_small, DW_AT_decimal_sign,
	DW_AT_digit_count, DW_AT_picture_string, DW_AT_mutable,
	DW_AT_threads_scaled, DW_AT_explicit, DW_AT_object_pointer,
	DW_AT_endianity, DW_AT_elemental, DW_AT_pure, DW_AT_recursive,
	DW_AT_signature, DW_AT_main_subprogram, DW_AT_data_bit_offset,
	DW_AT_const_expr, DW_AT_enum_class, DW_AT_linkage_name,
	DW_LNS_set_prologue_end, DW_LNS_set_epilogue_begin,
	DW_LNS_set_isa, DW_LNE_set_discriminator, DW_LANG_Python): Define.

	* src/prelink.h (send_file): New prototype.
	* src/execstack.c (send_file): New dummy function.
	* src/verify.c (send_file): No longer static.  Don't loop forever
	if write or read return 0.
	* src/undo.c (prelink_undo): If undo_output is -, use /tmp/undo